package cz.hornakova.barbora.tennisclub.model.entity;

public enum GameType {
    SINGLES,
    DOUBLES,
}
